[package]
name = "collector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "service"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.52"
config = "0.12.0"
deepsize = "0.2.0"
thiserror = "1.0.30"
futures = { version = "0.3.21" }

tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }

anyhow = { version = "1.0.57" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.81" }

tracing = { version = "0.1.34", features = ["log"] }
tracing-actix-web = "0.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

actix-web = "4"
actix-web-prom = "0.6.0"

duration-string = { version = "0.0.6", features = ["serde"] }

kafka = "0.9"

pepe-config = "0.0.2"
